# nncase

./: .gitignore  AGENTS.md  CMakeLists.txt  Directory.Packages.props  conanfile.py  requirements.test.txt
.codex/skills/nncase-developer/: SKILL.md
.github/actions/cleanup-runner/: action.yml
.github/disabled-workflows/: compiler-test.yml  runtime-build.yml
.github/workflows/: compiler-build.yml  compiler-python-release.yml  presubmit.yml  runtime-build.yml  runtime-k210.yml  runtime-linux-x64-gcc.yml  runtime-macos-x64-appleclang.yml
cmake/: compile_flags.cmake
docs/design/: pyntt.md
docs/design/tiling/: n-buffer-pipeline.md
examples/user_guide/: k80_simulator.py
modules/Nncase.Modules.K210/Targets/: K210Target.cs
modules/Nncase.Modules.NTT/: NTTModule.cs  Nncase.Modules.NTT.csproj  packages.lock.json
modules/Nncase.Modules.NTT/CodeGen/: ReductionCodegenUtility.cs
modules/Nncase.Modules.NTT/Passes/: NTTAffineSelectionPass.cs  NTTTIRSelectionPass.cs  PassUtility.cs
modules/Nncase.Modules.NTT/Properties/: AssemblyInfo.cs
modules/Nncase.Modules.NTT/Targets/: BlockMicroKernelModels.cs  CPUModuleCompiler.cs  CPUTarget.cs  CUDAModuleCompiler.cs  CUDATarget.cs  INTTModuleCompiler.cs  NTTTarget.cs  NTTTargetMachineCatalog.cs  NTTTargetOptions.cs  NTTTargetOptionsCommand.cs  PyNTTModuleCompiler.cs  PyNTTTarget.cs  PyNTTTargetOptions.cs  TargetStorageEncodingModels.cs  TritonLoopPipelineBackend.cs  TritonTargetCapability.cs  TritonTargetOpCostModel.cs
modules/Nncase.Modules.StackVM/: packages.lock.json
ntt/cmake/: compile_flags.cmake  ntt_module.cmake
ntt/include/nncase/: bfloat16.h  exmy_base.h  float8.h  float_subbyte.h  half.h
ntt/src/: cpu_runtime.cpp  cuda_runtime.cu
ntt/test/: ntt_test.h
ntt/test/benchmark_test/: benchmark_ntt_f32_cast.cpp
ntt/test/ctest/: CMakeLists.txt  test_ntt_cast.cpp  test_ntt_cast_fp4.cpp  test_ntt_expand.cpp  test_ntt_matmul_fp4.cpp  test_ntt_reduce.cpp  test_ntt_reshard.cpp  test_ntt_scatter_nd.cpp  test_ntt_top_k.cpp  test_ntt_transpose.cpp  test_ntt_transpose_half.cpp  test_ntt_where.cpp
ntt/test/ctest/test_generator/: generate_binary_tests.py  generate_cast_tests.py  generate_unary_tests.py  test_generator_base.py
pyntt/: README.md  pyproject.toml
pyntt/pyntt/: __init__.py
pyntt/pyntt/backends/: __init__.py
pyntt/pyntt/backends/triton/: __init__.py  backend.py
pyntt/pyntt/codegen/: __init__.py  render.py
pyntt/pyntt/codegen/templates/triton/: module.py.jinja  top_kernel.py.jinja
pyntt/pyntt/codegen/templates/triton/kernels/: Bitcast.py.jinja  Concat.py.jinja  Conv2D.py.jinja  ElementwiseBinary.py.jinja  ElementwiseCast.py.jinja  ElementwiseUnary.py.jinja  ElementwiseWhere.py.jinja  Gather.py.jinja  Gemv.py.jinja  GetPositionIds.py.jinja  LayerNorm.py.jinja  MatMulGlu.py.jinja  Matmul.py.jinja  Memcopy.py.jinja  NormApply.py.jinja  NormStats.py.jinja  PackedMatMulGlu.py.jinja  PackedQKVParallelLinear.py.jinja  Pad.py.jinja  PagedAttention.py.jinja  QKVParallelLinear.py.jinja  Reduce.py.jinja  Reshape.py.jinja  Reshard.py.jinja  RoPE.py.jinja  ScatterND.py.jinja  ShardReduce.py.jinja  Slice.py.jinja  Softmax.py.jinja  Summa.py.jinja  TensorLoad.py.jinja  TensorRegionCopy.py.jinja  TensorStore.py.jinja  Transpose.py.jinja  UpdatePagedAttentionKVCache.py.jinja  VectorLayout.py.jinja  _common.py.jinja  _elementwise.py.jinja  _matmul.py.jinja  _matmul_glu.py.jinja  (+2 more)
pyntt/pyntt/codegen/templates/triton/pipelines/: cp_async_n2.py.jinja
pyntt/pyntt/ir/: __init__.py  spec.py
pyntt/pyntt/runtime/: __init__.py  errors.py  interpreter.py  module.py  sharding.py  tensor.py  triton.py  tuning.py  workspace.py
pyntt/pyntt/testing/: __init__.py
python/: _nncase.pyi
python/common/: runtime_llm_ffi.h
python/nncase/: __init__.py
python/nncase/native/: ffi.cpp
src/Native/src/: CMakeLists.txt  api.cpp  cuda_test.cu  test.cpp  test_cli.cpp  test_dynamic_cli.cpp
src/Native/src/runtime/cuda/: CMakeLists.txt  runtime_function.cpp  runtime_function.h  runtime_function.run.cpp  runtime_module.cpp  runtime_module.h
src/Native/src/runtime/cuda/loaders/: CMakeLists.txt  cuda_loader.cpp  cuda_loader.h
src/Native/test/: ntt_test.h
src/Native/test/benchmark_test/: CMakeLists.txt  gemm_opt.cpp
src/Nncase.Cli/: packages.lock.json
src/Nncase.CodeGen/CodeGen/: LinkedFunction.cs  SectionManager.cs
src/Nncase.Compiler/: Compiler.cs  packages.lock.json
src/Nncase.Compiler/Interop/: CApi.cs
src/Nncase.Core/: CompilerServices.cs  DistributedType.cs  Float8.cs  ITarget.cs  ShapeBucketOptions.cs  TargetMachineModel.cs  TensorUtilities.cs
src/Nncase.Core/CostModel/: Cost.cs  TargetOpCostModel.cs
src/Nncase.Core/Evaluator/: ICostEvaluateContext.cs  TypeInference.cs
src/Nncase.Core/IO/: IPagedAttentionConfigJsonConverter.cs
src/Nncase.Core/IR/: BaseExpr.cs  BaseFunction.cs  BufferAliasInfo.cs  Call.cs  ExprCloner.cs  ExprCloner.g.cs  ExprFunctor.g.cs  ExprRewriter.g.cs  ExprVisitor.g.cs  Function.cs  FunctionRole.cs  FunctionWrapper.cs  Fusion.cs  IRList.csv  MemoryEffect.cs  Op.cs  PrimFunctionWrapper.cs  TensorConst.cs  Var.cs
src/Nncase.Evaluator/: CostEvaluateContext.cs  CostEvaluateVisitor.cs  EvaluateVisitor.cs  EvaluatorApplicationPart.cs  EvaluatorModule.cs  ITileWorkloadEvaluator.cs  MetricEvaluateVisitor.cs  TileWorkloadProvider.cs  TypeInferenceVisitor.cs
src/Nncase.Importer/: BaseImporter.cs
src/Nncase.Passes/: FunctionPass.cs  PassManager.cs  PassesModule.cs  SimplifyProvider.cs
src/Nncase.Studio/: packages.lock.json
src/Nncase.Targets/: Target.cs
src/Nncase.Tests/: packages.lock.json
src/Nncase.Tests.TestFixture/: packages.lock.json
src/kernels/: tensor_compute.cpp
src/targets/: neutral_target.cpp
tests/: config.toml  evaluator.py  huggingface_test_runner.py  inference.py  onnx_test_runner.py  test_runner.py
tests/other/: test_llm_ffi.py  test_pyntt_package.py  test_pyntt_qwen3_benchmark.py  test_targets.py
toolchains/: riscv64-unknown-linux.toolchain.cmake  riscv64.cmake  x86_64-linux-cuda.profile.jinja
tools/: build-runtime.sh  build.sh  pyntt_qwen3_benchmark.py
(+634 files in other folders)
