[project]
name = "pyntt"
version = "0.0.0"
requires-python = ">=3.10"
description = "Python runtime and kernel library for the nncase PyNTT backend"
dependencies = ["jinja2"]

[project.optional-dependencies]
triton = ["torch", "triton"]

[tool.setuptools.package-data]
pyntt = ["codegen/templates/**/*.jinja"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
